--- a/css/button.css
+++ b/css/button.css
@@ -24,14 +24,8 @@
 /* Меню выбора мультика */
 
 .select-button-container {
-  /* display: flex;
-  flex-direction: column; */
   width: 275px;
-  gap: 35px;
-  position: absolute;
-  left: 30px;
-  top: 266px;
-  /* transform: translate(-50%); */
+  margin: 150px 0 0 30px;
 }
 .select-button-container button {
   height: 46px;
